--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx @opennextjs/cloudflare build",
+    "build": "next build && npx @opennextjs/cloudflare build --skipNextBuild",
     "preview": "npx wrangler dev",
     "deploy": "npx wrangler deploy",
     "start": "next start",
